# trio-chrome-devtools-protocol

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: api.rst  changelog.rst  conf.py  getting_started.rst  index.rst  installation.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/api/: test.rst
examples/: get_title.py  get_title_simple_calls.py  notebook.ipynb  screenshot.py  take_heap_snapshot.py
generator/: generate.py  test_generate.py
test/: test_trio_cdp.py
tests/: __init__.py  test_trio_cdp.py
trio_cdp/: __init__.py  context.py
